Clean up hub and fix vscode problem